# feedclaw-desktop

./: .gitignore  CLAUDE.md  README.md  index.html  install.sh  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  gateway.rs  install.rs  logs.rs  mod.rs  runtime.rs  skills.rs
src/components/: AppButton.tsx  GlassCard.tsx  Sidebar.tsx  TerminalOverlay.tsx
src/lib/: tauri.ts
src/pages/: AboutPage.tsx  ConfigPage.tsx  DiagnosisPage.tsx  FeishuPage.tsx  SkillsPage.tsx  StatusPage.tsx  TokenUsagePage.tsx
src/styles/: globals.css
