[package]
name = "runclaw"
version = "0.1.0"
description = "RunClaw - Desktop GUI for openclaw CLI"
authors = ["Patrick"]
edition = "2021"

[lib]
name = "runclaw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
which = "6"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
window-vibrancy = "0.7"
